added more tests, still lacking a test selector screen

--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
     </canvas>
     
 
-    <script type="application/dart" src="main.dart"></script>
+    <script type="application/dart" src="tests.dart"></script>
     <script src="packages/browser/dart.js"></script>
   </body>
 </html>
