--- a/test/accessor_and_tweenable_test.html
+++ b/test/accessor_and_tweenable_test.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>tweenengine's Test Suite</title>
+    <title>tweenengine's Basic Test Suite</title>
   </head>
   <body>
-    <script type="application/dart" src="test.dart"></script>
+    <script type="application/dart" src="accessor_and_tweenable_test.dart"></script>
     <script src="packages/browser/dart.js"></script>
   </body>
 </html>
