examples can now be run with Dart 2.0 using the webdev/build_runner package

--- a/example/canvas/index.html
+++ b/example/canvas/index.html
@@ -14,6 +14,7 @@
          display: inline;
       }
     </style>
+    <script defer src="example.dart.js" type="application/javascript"></script>
   </head>
   <body>
     <div id="container">
@@ -21,9 +22,5 @@
       <br/><br/>
       <div id="info"></div>
     </div>
-    
-
-    <script type="application/dart" src="example.dart"></script>
-    <script src="packages/browser/dart.js"></script>
   </body>
 </html>
