--- a/example/progress_bar/index.html
+++ b/example/progress_bar/index.html
@@ -23,6 +23,7 @@
         margin-left: 80px;
       }
     </style>
+    <script defer src="progress_bar.dart.js" type="application/javascript"></script>
   </head>
  
   <body style="padding: 50px;">   
@@ -30,7 +31,5 @@
       <div class="progress-bar" style="width: 60%;">
       </div>
     </div>
-    <script type="application/dart" src="progress_bar.dart"></script>
-    <script src="packages/browser/dart.js"></script>
   </body>
 </html>
